--- a/phymigaciya.html
+++ b/phymigaciya.html
@@ -59,8 +59,56 @@
 
                     <div class="collapse navbar-collapse navbar-collapse-without-width100" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle nav-link-text" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинсекция</a>
+                            <div class="dropdown">
+                                <a class="dropbtn nav-link dropdown-toggle nav-link-text" href="dezincekciya.html">Дезинсекция</a>
+                                <div class="dropdown-content">
+                                    <a class="dropdown-item" href="dezincekciya/clop.html">Клопы</a>
+                                    <a class="dropdown-item" href="dezincekciya/tarakan.html">Тараканы</a>
+                                    <a class="dropdown-item" href="dezincekciya/komary.html">Комары</a>
+                                    <a class="dropdown-item" href="dezincekciya/osi.html">Осы</a>
+                                    <a class="dropdown-item" href="dezincekciya/kleshhi.html">Клещи</a>
+                                    <a class="dropdown-item" href="dezincekciya/bloh.html">Блохи</a>
+                                    <a class="dropdown-item" href="dezincekciya/muraviyi.html">Муравьи</a>
+                                    <a class="dropdown-item" href="dezincekciya/myhi.html">Мухи</a>
+                                </div>
+                            </div>
+                            <div class="dropdown2">
+                                <a class="dropbtn2 nav-link dropdown-toggle nav-link-text" href="deratizaciya.html">Дератизация</a>
+                                <div class="dropdown-content2">
+                                    <a class="dropdown-item" href="deratizaciya/krisa.html">Крысы</a>
+                                    <a class="dropdown-item" href="deratizaciya/krot.html">Кроты</a>
+                                    <a class="dropdown-item" href="deratizaciya/maus.html">Мыши</a>
+                                </div>
+                            </div>
+                            <div class="dropdown3">
+                                <a class="dropbtn3 nav-link dropdown-toggle nav-link-text" href="desinphekciya.html">Дезинфекция</a>
+                                <div class="dropdown-content3">
+                                    <a class="dropdown-item" href="desinphekciya/grib.html">Грибы</a>
+                                    <a class="dropdown-item" href="desinphekciya/plesen.html">Плесень</a>
+                                    <a class="dropdown-item" href="desinphekciya/virus.html">Вирус</a>
+                                </div>
+                            </div>
+                            <div class="dropdown5">
+                                <a class="dropbtn5 nav-link dropdown-toggle nav-link-text" href="deserpentaciya.html">Десерпентация</a>
+                                <div class="dropdown-content5">
+                                    <a class="dropdown-item" href="deserpentaciya/zmeeloff.html">ZmeelOFF</a>
+                                </div>
+                            </div>
+                            <div class="dropdown4">
+                                <a class="dropbtn4 nav-link dropdown-toggle nav-link-text" href="phymigaciya.html">Фумигация</a>
+                                <div class="dropdown-content4">
+                                    <a class="dropdown-item" href="phymigaciya/sklad.html">Склады</a>
+                                    <a class="dropdown-item" href="phymigaciya/wood_home.html">Деревянные дома</a>
+                                </div>
+                            </div>
+                            <li class="nav-item">
+                                <a class="nav-link nav-link-text" href="for_organization.html">Для организаций</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link nav-link-text" href="contacts.html">Контакты</a>
+                            </li>
+                            <!-- <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle nav-link-text" href="dezincekciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинсекция</a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="dezincekciya/clop.html">Клопы</a></li>
                                     <li><a class="dropdown-item" href="dezincekciya/tarakan.html">Тараканы</a></li>
@@ -73,33 +121,21 @@
                                 </ul>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle nav-link-text" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дератизация</a>
+                                <a class="nav-link dropdown-toggle nav-link-text" href="deratizaciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дератизация</a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="deratizaciya/krisa.html">Крысы</a></li>
                                     <li><a class="dropdown-item" href="deratizaciya/krot.html">Кроты</a></li>
                                     <li><a class="dropdown-item" href="deratizaciya/maus.html">Мыши</a></li>
                                 </ul>
-                            </li>
+                            </li> 
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle nav-link-text" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинфекция</a>
+                                <a class="nav-link dropdown-toggle nav-link-text" href="desinphekciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинфекция</a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="phymigaciya/grib.html">Грибы</a></li>
-                                    <li><a class="dropdown-item" href="phymigaciya/plesen.html">Плесень</a></li>
-                                    <li><a class="dropdown-item" href="phymigaciya/virus.html">Вирус</a></li>
+                                    <li><a class="dropdown-item" href="desinphekciya/grib.html">Грибы</a></li>
+                                    <li><a class="dropdown-item" href="desinphekciya/plesen.html">Плесень</a></li>
+                                    <li><a class="dropdown-item" href="desinphekciya/virus.html">Вирус</a></li>
                                 </ul>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="deserpentaciya.html">Десерпентация</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="phymigaciya.html">Фумигация</a>
-                            </li>  
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="for_organization.html">Для организаций</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="contacts.html">Контакты</a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
 
