--- a/for_organization.html
+++ b/for_organization.html
@@ -58,8 +58,56 @@
 
                     <div class="collapse navbar-collapse navbar-collapse-without-width100" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle nav-link-text" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинсекция</a>
+                            <div class="dropdown">
+                                <a class="dropbtn nav-link dropdown-toggle nav-link-text" href="dezincekciya.html">Дезинсекция</a>
+                                <div class="dropdown-content">
+                                    <a class="dropdown-item" href="dezincekciya/clop.html">Клопы</a>
+                                    <a class="dropdown-item" href="dezincekciya/tarakan.html">Тараканы</a>
+                                    <a class="dropdown-item" href="dezincekciya/komary.html">Комары</a>
+                                    <a class="dropdown-item" href="dezincekciya/osi.html">Осы</a>
+                                    <a class="dropdown-item" href="dezincekciya/kleshhi.html">Клещи</a>
+                                    <a class="dropdown-item" href="dezincekciya/bloh.html">Блохи</a>
+                                    <a class="dropdown-item" href="dezincekciya/muraviyi.html">Муравьи</a>
+                                    <a class="dropdown-item" href="dezincekciya/myhi.html">Мухи</a>
+                                </div>
+                            </div>
+                            <div class="dropdown2">
+                                <a class="dropbtn2 nav-link dropdown-toggle nav-link-text" href="deratizaciya.html">Дератизация</a>
+                                <div class="dropdown-content2">
+                                    <a class="dropdown-item" href="deratizaciya/krisa.html">Крысы</a>
+                                    <a class="dropdown-item" href="deratizaciya/krot.html">Кроты</a>
+                                    <a class="dropdown-item" href="deratizaciya/maus.html">Мыши</a>
+                                </div>
+                            </div>
+                            <div class="dropdown3">
+                                <a class="dropbtn3 nav-link dropdown-toggle nav-link-text" href="desinphekciya.html">Дезинфекция</a>
+                                <div class="dropdown-content3">
+                                    <a class="dropdown-item" href="desinphekciya/grib.html">Грибы</a>
+                                    <a class="dropdown-item" href="desinphekciya/plesen.html">Плесень</a>
+                                    <a class="dropdown-item" href="desinphekciya/virus.html">Вирус</a>
+                                </div>
+                            </div>
+                            <div class="dropdown5">
+                                <a class="dropbtn5 nav-link dropdown-toggle nav-link-text" href="deserpentaciya.html">Десерпентация</a>
+                                <div class="dropdown-content5">
+                                    <a class="dropdown-item" href="deserpentaciya/zmeeloff.html">ZmeelOFF</a>
+                                </div>
+                            </div>
+                            <div class="dropdown4">
+                                <a class="dropbtn4 nav-link dropdown-toggle nav-link-text" href="phymigaciya.html">Фумигация</a>
+                                <div class="dropdown-content4">
+                                    <a class="dropdown-item" href="phymigaciya/sklad.html">Склады</a>
+                                    <a class="dropdown-item" href="phymigaciya/wood_home.html">Деревянные дома</a>
+                                </div>
+                            </div>
+                            <li class="nav-item">
+                                <a class="nav-link nav-link-text" href="for_organization.html">Для организаций</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link nav-link-text" href="contacts.html">Контакты</a>
+                            </li>
+                            <!-- <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle nav-link-text" href="dezincekciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинсекция</a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="dezincekciya/clop.html">Клопы</a></li>
                                     <li><a class="dropdown-item" href="dezincekciya/tarakan.html">Тараканы</a></li>
@@ -72,33 +120,21 @@
                                 </ul>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle nav-link-text" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дератизация</a>
+                                <a class="nav-link dropdown-toggle nav-link-text" href="deratizaciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дератизация</a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="deratizaciya/krisa.html">Крысы</a></li>
                                     <li><a class="dropdown-item" href="deratizaciya/krot.html">Кроты</a></li>
                                     <li><a class="dropdown-item" href="deratizaciya/maus.html">Мыши</a></li>
                                 </ul>
-                            </li>
+                            </li> 
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle nav-link-text" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинфекция</a>
+                                <a class="nav-link dropdown-toggle nav-link-text" href="desinphekciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинфекция</a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a class="dropdown-item" href="desinphekciya/grib.html">Грибы</a></li>
                                     <li><a class="dropdown-item" href="desinphekciya/plesen.html">Плесень</a></li>
                                     <li><a class="dropdown-item" href="desinphekciya/virus.html">Вирус</a></li>
                                 </ul>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="deserpentaciya.html">Десерпентация</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="phymigaciya.html">Фумигация</a>
-                            </li>  
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="for_organization.html">Для организаций</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="contacts.html">Контакты</a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
 
@@ -110,7 +146,7 @@
 
     <!-- Блок с фото и формой после хедера -->
     <!-- НАЧАЛО -->
-    <div class="container-fluid first_block__photo" style="background-image: url(img/тест.png);">
+    <div class="container-fluid first_block__photo" style="background-image: url(img/организация.jpg);">
         <div class="container">
             <div class="row first_block__container">
                 <div class="offset-lg-1 col-lg-6 col-md-7 first_block__text_container">
@@ -176,7 +212,7 @@
     <div class="container enter_container">
         <div class="enter_content">
             <p class="enter__main_text ml-5">
-                ООО «Дезсан» проводит услуги <a href="" class="enter__link">дезинфекции</a>, <a href="" class="enter__link">дератизации</a>, <a href="" class="enter__link">дезинсекции</a>, <a href="" class="enter__link">дезодорации</a> и <a href="" class="enter__link">фумигации</a> юридическим лицам. Обратившись к нам, вы можете быть уверены в решении своей проблемы, исключить риск порчи имущества и причинения вреда здоровью сотрудников. Мы проводим очаговую и профилактическую обработку, а с предприятиями, где повышен риск проникновения вредителей (например, продуктовые склады), работаем на постоянной основе.
+                ООО «Дезсан» проводит услуги <a href="" class="enter__link">дезинфекции</a>, <a href="" class="enter__link">дератизации</a>, <a href="" class="enter__link">дезинсекции</a> и <a href="" class="enter__link">фумигации</a> юридическим лицам. Обратившись к нам, вы можете быть уверены в решении своей проблемы, исключить риск порчи имущества и причинения вреда здоровью сотрудников. Мы проводим очаговую и профилактическую обработку, а с предприятиями, где повышен риск проникновения вредителей (например, продуктовые склады), работаем на постоянной основе.
             </p>
         </div>
     </div>
@@ -238,7 +274,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center m-auto">
+            <!-- <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center m-auto">
                 <div class="one_card">
                     <a href="">
                         <div class="one_card__infa">
@@ -253,7 +289,7 @@
                         </div>
                     </a>
                 </div>
-            </div>
+            </div> -->
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center m-auto">
                 <div class="one_card">
                     <a href="">
@@ -274,9 +310,9 @@
                 <div class="one_card">
                     <a href="">
                         <div class="one_card__infa">
-                            <div class="one_card__icon">
+                            <div class="one_card__icon" style="position: relative;">
                                 <i class="fa"> 
-                                    <img src="img/" alt=""> 
+                                    <img src="img/дез.jpg" alt="" style="position: absolute; top: 13px; left: 0;">
                                 </i>
                             </div>
                             <h3 class="one_card__title title_shadow">фумигация</h3>
