--- a/phymigaciya/sklad.html
+++ b/phymigaciya/sklad.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="SHORTCUT ICON" href="../img/dezodoracija.png" type="image/x-icon">
 
-    <title>Плесень</title>
+    <title>Склады</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" id="ao_optimized_gfonts" href="https://fonts.googleapis.com/css?family=Roboto:500&amp;display=swap">
@@ -29,11 +29,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-md-10 col-sm-12 top_black_block text-center">
-                    <a href="../our_services.html" class="top_menu_link">Наши услуги</a>
-                    <a href="../about_us.html" class="top_menu_link">О нас</a>
-                    <a href="../comments.html" class="top_menu_link">Отзывы</a>
-                    <a href="../methods_work.html" class="top_menu_link">Методы работы</a>
-                    <a href="../question-answer.html" class="top_menu_link">Вопрос-ответ</a>
+                    <a href="our_services.html" class="top_menu_link">Наши услуги</a>
+                    <a href="about_us.html" class="top_menu_link">О нас</a>
+                    <a href="comments.html" class="top_menu_link">Отзывы</a>
+                    <a href="methods_work.html" class="top_menu_link">Методы работы</a>
+                    <a href="question-answer.html" class="top_menu_link">Вопрос-ответ</a>
                 </div>
                 <div class="col-lg-4 top_black_block text-center">
                     <a href="tel:+380503559950" class="top_menu_link_to">&#128379;</a><span>+380503559950</span>
@@ -58,27 +58,82 @@
 
                     <div class="collapse navbar-collapse navbar-collapse-without-width100" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../dezincekciya.html">Дезинсекция</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../deratizaciya.html">Дератизация</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../desinphekciya.html">Дезинфекция</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../deserpentaciya.html">Десерпентация</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../phymigaciya.html">Фумигация</a>
-                            </li>  
+                            <div class="dropdown">
+                                <a class="dropbtn nav-link dropdown-toggle nav-link-text" href="../dezincekciya.html">Дезинсекция</a>
+                                <div class="dropdown-content">
+                                    <a class="dropdown-item" href="../dezincekciya/clop.html">Клопы</a>
+                                    <a class="dropdown-item" href="../dezincekciya/tarakan.html">Тараканы</a>
+                                    <a class="dropdown-item" href="../dezincekciya/komary.html">Комары</a>
+                                    <a class="dropdown-item" href="../dezincekciya/osi.html">Осы</a>
+                                    <a class="dropdown-item" href="../dezincekciya/kleshhi.html">Клещи</a>
+                                    <a class="dropdown-item" href="../dezincekciya/bloh.html">Блохи</a>
+                                    <a class="dropdown-item" href="../dezincekciya/muraviyi.html">Муравьи</a>
+                                    <a class="dropdown-item" href="../dezincekciya/myhi.html">Мухи</a>
+                                </div>
+                            </div>
+                            <div class="dropdown2">
+                                <a class="dropbtn2 nav-link dropdown-toggle nav-link-text" href="../deratizaciya.html">Дератизация</a>
+                                <div class="dropdown-content2">
+                                    <a class="dropdown-item" href="../deratizaciya/krisa.html">Крысы</a>
+                                    <a class="dropdown-item" href="../deratizaciya/krot.html">Кроты</a>
+                                    <a class="dropdown-item" href="../deratizaciya/maus.html">Мыши</a>
+                                </div>
+                            </div>
+                            <div class="dropdown3">
+                                <a class="dropbtn3 nav-link dropdown-toggle nav-link-text" href="../desinphekciya.html">Дезинфекция</a>
+                                <div class="dropdown-content3">
+                                    <a class="dropdown-item" href="../desinphekciya/grib.html">Грибы</a>
+                                    <a class="dropdown-item" href="../desinphekciya/plesen.html">Плесень</a>
+                                    <a class="dropdown-item" href="../desinphekciya/virus.html">Вирус</a>
+                                </div>
+                            </div>
+                            <div class="dropdown5">
+                                <a class="dropbtn5 nav-link dropdown-toggle nav-link-text" href="../deserpentaciya.html">Десерпентация</a>
+                                <div class="dropdown-content5">
+                                    <a class="dropdown-item" href="../deserpentaciya/zmeeloff.html">ZmeelOFF</a>
+                                </div>
+                            </div>
+                            <div class="dropdown4">
+                                <a class="dropbtn4 nav-link dropdown-toggle nav-link-text" href="../phymigaciya.html">Фумигация</a>
+                                <div class="dropdown-content4">
+                                    <a class="dropdown-item" href="../phymigaciya/sklad.html">Склады</a>
+                                    <a class="dropdown-item" href="../phymigaciya/wood_home.html">Деревянные дома</a>
+                                </div>
+                            </div>
                             <li class="nav-item">
                                 <a class="nav-link nav-link-text" href="../for_organization.html">Для организаций</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav-link-text" href="../contacts.html">Контакты</a>
+                                <a class="nav-link nav-link-text" href="../contacts.html">Контакты</a>                      </li>
+                            <!-- <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle nav-link-text" href="dezincekciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинсекция</a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="dezincekciya/clop.html">Клопы</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/tarakan.html">Тараканы</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/komary.html">Комары</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/osi.html">Осы</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/kleshhi.html">Клещи</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/bloh.html">Блохи</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/muraviyi.html">Муравьи</a></li>
+                                    <li><a class="dropdown-item" href="dezincekciya/myhi.html">Мухи</a></li>
+                                </ul>
                             </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle nav-link-text" href="deratizaciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дератизация</a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="deratizaciya/krisa.html">Крысы</a></li>
+                                    <li><a class="dropdown-item" href="deratizaciya/krot.html">Кроты</a></li>
+                                    <li><a class="dropdown-item" href="deratizaciya/maus.html">Мыши</a></li>
+                                </ul>
+                            </li> 
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle nav-link-text" href="desinphekciya.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Дезинфекция</a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="desinphekciya/grib.html">Грибы</a></li>
+                                    <li><a class="dropdown-item" href="desinphekciya/plesen.html">Плесень</a></li>
+                                    <li><a class="dropdown-item" href="desinphekciya/virus.html">Вирус</a></li>
+                                </ul>
+                            </li> -->
                         </ul>
                     </div>
 
@@ -95,19 +150,16 @@
             <div class="row first_block__container">
                 <div class="offset-lg-1 col-lg-6 col-md-7 first_block__text_container">
                     <div class="first_block__text_content">
-                        <h1 class="first_block__main_text">Фумигация/обеззараживание</h1>
+                        <h1 class="first_block__main_text">Фумигация/обеззараживание зерна, зернохранилищ</h1>
                         <ol class="first_block__list_with_text">
                             <li>
-                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Только профессиональные методы борьбы с плесенью</span>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Поиск оптимальных решений в вопросах фумигации</span>
                             </li>
                             <li>
-                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Абсолютно безопасно для людей, животных и растений</span>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Большой опыт в сфере обеззараживания</span>
                             </li>
                             <li>
-                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Даем гарантию на проделанную работу</span>
-                            </li>
-                            <li>
-                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Работаем круглосуточно: 7 дней в неделю.</span>
+                                <span class="first_block__icon">&#10003;</span><span class="first_block__text">Использование качественных фумигантов</span>
                             </li>
                         </ol>
                         <p class="text-center first_block__link"><a href="tel:+380503559950">+38(050)-355-99-50</a> | <a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJNqtbnWrnmlTlNjMjcNkRXdjLBxZbMxbxWjdQsMXrLNKQHhLWLnxCcrbJSSCkCKPkHhCXB">dezsan.kh@gmail.com</a></p></div>
@@ -185,7 +237,7 @@
     <div class="container kill_sklad_on_dacha__container mt-4">
         <div class="row kill_sklad_on_dacha__content">
             <div class="offset-lg-1 col-lg-10 offset-md-1 col-md-10 kill_sklad_on_dacha__block_main_text text-center">
-                <p class="kill_sklad_on_dacha__main_text"><span style="color:red; font-weight: 800;">Фумигация</span>, основные принципи</p>
+                <p class="kill_sklad_on_dacha__main_text"><span style="color:red; font-weight: 800;">Фумигация</span>, основные принципы</p>
                 <br><br>
             </div>
         </div>
